# fav2notion

./: .gitignore  Makefile  README.md  lambda_function.py  notion.py  pyproject.toml  twitter.py
