[tool.poetry]
name = "fav2notion"
version = "0.1.0"
description = ""
authors = ["shinobe179 <befs.anne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
